[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://graphics/quad.png" type="Texture" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[node name="Settings" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.341176 )
position = Vector2( 868.979, 551.109 )
scale = Vector2( 4.145, 4.167 )
texture = ExtResource( 2 )

[node name="MusicLabel" type="Label" parent="."]
margin_left = 629.727
margin_top = 427.358
margin_right = 994.727
margin_bottom = 524.358
custom_fonts/font = SubResource( 1 )
text = "Music:"

[node name="SFXLabel" type="Label" parent="."]
margin_left = 631.313
margin_top = 620.933
margin_right = 996.313
margin_bottom = 717.933
custom_fonts/font = SubResource( 1 )
text = "SFX:"

[node name="SoundLabel" type="Label" parent="."]
margin_left = 625.441
margin_top = 248.018
margin_right = 990.441
margin_bottom = 345.018
custom_fonts/font = SubResource( 1 )
text = "Sounds:"

[node name="SoundCheckBox" type="CheckBox" parent="."]
margin_left = 998.354
margin_top = 267.207
margin_right = 1022.35
margin_bottom = 291.207
rect_scale = Vector2( 3, 3 )

[node name="MusicSlider" type="HSlider" parent="."]
margin_left = 637.381
margin_top = 527.489
margin_right = 1054.38
margin_bottom = 573.489
rect_scale = Vector2( 1, 2 )
min_value = -10.0
max_value = 10.0
ticks_on_borders = true

[node name="SFXSlider" type="HSlider" parent="."]
margin_left = 638.967
margin_top = 721.064
margin_right = 1055.97
margin_bottom = 767.064
rect_scale = Vector2( 1, 2 )
min_value = -10.0
max_value = 10.0
ticks_on_borders = true

[node name="SaveButton" type="Button" parent="."]
margin_left = 742.875
margin_top = 834.56
margin_right = 962.875
margin_bottom = 913.56
custom_fonts/font = SubResource( 2 )
text = "OK"
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
